feat: create footer component and styles

--- a/src/components/MainContent/MainContent.css
+++ b/src/components/MainContent/MainContent.css
@@ -15,6 +15,10 @@ section.completedTasks {
 	text-align: center;
 	padding: 20px 0px;
 }
+section.activeTasks {
+	text-align: center;
+	padding: 20px 0px;
+}
 section.deletedTasks {
 	text-align: center;
 	padding: 20px 0px;
