--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,28 +1,28 @@
 footer.footerContainer {
-	position: absolute;
-	bottom: 0;
-	width: 100%;
+    position: absolute;
+    bottom: auto;
+    width: 100%;
 }
 p.copyrightFooter {
-	display: flex;
-	justify-content: center;
-	align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 span.footerSocials {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	margin-top: 15px;
-	margin-bottom: 15px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 svg.footerLinkedin {
-	color: #0072b1;
-	font-size: 32px;
-	margin-right: 30px;
-	cursor: pointer;
+    color: #0072b1;
+    font-size: 32px;
+    margin-right: 30px;
+    cursor: pointer;
 }
 svg.footerGithub {
-	color: #111;
-	font-size: 32px;
-	cursor: pointer;
+    color: #111;
+    font-size: 32px;
+    cursor: pointer;
 }
