--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,21 +1,48 @@
 .headerContainer {
-	display: flex;
-	width: 100%;
-	align-items: center;
-	justify-content: space-evenly;
-	margin-top: 30px;
-	margin-bottom: 30px;
-	flex-wrap: wrap;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 30px;
+    margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 .headerContainer h2 {
-	text-transform: uppercase;
+    text-transform: uppercase;
 }
 nav.headerNavbar {
-	width: 50%;
-	display: flex;
-	justify-content: space-evenly;
-	flex-wrap: wrap;
+    width: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
 }
 nav.headerNavbar p {
-	text-transform: uppercase;
+    text-transform: uppercase;
+}
+.headerHead {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    width: 20%;
+}
+svg.checkIcon {
+    font-size: 32px;
+}
+button.btnSearch {
+    background: black;
+    color: white;
+    border: 0;
+    text-transform: uppercase;
+    margin-left: 10px;
+    cursor: pointer;
+    font-size: 12px;
+    width: 60px;
+    height: 20px;
+}
+.headerSearchForm {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
 }
