--- a/src/components/TaskList/TaskList.css
+++ b/src/components/TaskList/TaskList.css
@@ -21,3 +21,25 @@
     align-items: center;
     flex-direction: column;
 }
+button.buttonEditTask {
+    background: black;
+    color: white;
+    border: 0;
+    padding: 5px 5px;
+    text-transform: uppercase;
+    margin-right: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
+button.buttonDeleteTask {
+    background: black;
+    color: white;
+    border: 0;
+    padding: 5px 5px;
+    text-transform: uppercase;
+    margin-right: 10px;
+    margin-top: 10px;
+    cursor: pointer;
+    font-size: 16px;
+}
